--- a/styles/allSites.css
+++ b/styles/allSites.css
@@ -247,7 +247,7 @@ header span{
     width: 100%;
     height: 100%;
     background-color: var(--overlay-background-color);
-    z-index: 103;
+    z-index: 120;
     display: flex;
     justify-content: center;
     align-items: center;
